change link options

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ format:
     theme:
       light: [cosmo, styles.scss]
       dark: [darkly, styles.scss]
+    link-external-newwindow: true
   #pdf:
     #documentclass: scrreprt
 
