--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,10 +27,12 @@ bibliography: references.bib
 
 format:
   html:
+    link-external-icon: true
+    link-external-newwindow: true
     theme:
       light: [cosmo, styles.scss]
       dark: [darkly, styles.scss]
-    link-external-newwindow: true
+  
   #pdf:
     #documentclass: scrreprt
 
