--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "Designing Webpages"
+  title: "Webpage Design"
   author: "Alistair Bailey"
   date: last-modified
   date-format: "[Last Updated on] YYYY-MM-DD"
