add example webpages to book

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,7 @@ book:
     - how-people-read-webpages.qmd
     - how-to-write-for-the-web.qmd
     - how-to-use-imagery-and-visuals.qmd
+    - example-web-pages.qmd
     - postscript.qmd
     - references.qmd
 
