--- a/sites/_quarto.yml
+++ b/sites/_quarto.yml
@@ -1,5 +1,9 @@
+project: 
+  output-dir: ../docs
+
 format: 
     html:
       embed-resources: true
       toc: true
       page-layout: full
+      
