--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,7 @@ format:
     theme:
       light: [cosmo, styles.scss]
       dark: [cosmo, dark.scss]
+    csl: nature.csl
   
   #pdf:
     #documentclass: scrreprt
