--- a/sites/font-comparison/_metadata.yml
+++ b/sites/font-comparison/_metadata.yml
@@ -1,11 +1,12 @@
 format: 
     html:
       theme: [cosmo, fonts.scss]
-      title: "BBC News: Cheeky boar"
+      title: "[BBC News: Cheeky boar leaves nudist grunting in laptop chase](https://www.bbc.co.uk/news/world-europe-53692475)"
       date: 2020-08-07
       code-fold: true
       code-link: true
       embed-resources: true
       toc: false
       page-layout: full
-      
+      link-external-icon: true
+      link-external-newwindow: true
