--- a/sites/font-comparison/_metadata.yml
+++ b/sites/font-comparison/_metadata.yml
@@ -7,6 +7,7 @@ format:
       code-link: true
       embed-resources: true
       toc: false
-      page-layout: full
+      #page-layout: full
       link-external-icon: true
       link-external-newwindow: true
+      linestretch: 1.5
